--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="style.css">
-    <script type="text/javascript" defer src="index.js">
-    </script>
+    <link rel="stylesheet" href="style.css" />
+    <script type="text/javascript" defer src="index.js"></script>
     <header id="main">TITLE HERE</header>
   </head>
   <body>
